Thu Jun 15 18:37:43 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/Config_Handlers/CIAO_Events/CIAO_Events_Handlers.mpc:

          Added ciao_deployment_stub as a base project for
          CIAO_Events_Handlers, to eliminate 'unresolved symbol'
          linking errors. Thanks to Ming Xiong <ming.xiong@vanderbilt.edu>
          for suggesting the fix.

Thu Jun 15 15:10:58 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/be_extern.h:
        * tools/IDL3_to_IDL2/be_init.cpp:
        * tools/IDL3_to_IDL2/be_produce.cpp:

          Changes to keep this backend in sync with changes to the
          TAO_IDL front end - see TAO ChangeLog entry of a few
          minutes ago.

Thu Jun  8 16:07:05 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_Utils_T.cpp (describe_multiplex_receptacle):

          Fixed an error in instantiation of a
          Components::ConnectionDescription valuetype - the actual
          constructor call should have been on the OBV_* subclass.

Thu Jun  8 12:29:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Planner/PCVisitor.cpp:
          Fixed parameter never used warnings

Wed Jun  7 21:39:00 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/CIAO_Events/CIAO_Events_Handlers.mpc

          Removed unneeded base projects.

Wed Jun  7 21:07:11 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_Utils_T.cpp:

          Fixed CORBA memory management rule violations in
          Servant_Impl_Base static template methods
          describe_pub_event_source(), describe_simplex_receptacle() and
          describe_multiplex_receptacle(). Thanks to Phlip
          <phlip2005@gmail.com> for reporting a problem in
          get_all_receptacles() that uncovered the above violations.

Wed Jun  7 16:52:45 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>
